# audio_generation

./: .gitignore  README.md
AudioGeneration/: CMakeLists.txt
AudioGeneration/AudioGeneration/: CMakeLists.txt  main.cpp
AudioGeneration/AudioGeneration.xcodeproj/: project.pbxproj
AudioGeneration/AudioGeneration.xcodeproj/project.xcworkspace/xcuserdata/olhavasylyshyn.xcuserdatad/: UserInterfaceState.xcuserstate
AudioGeneration/AudioGeneration.xcodeproj/xcuserdata/olhavasylyshyn.xcuserdatad/xcschemes/: xcschememanagement.plist
AudioGeneration/AudioGeneration/include/: Options.h
